# computer-graphics

./: .gitignore  README.md  pyproject.toml
exercise_1/: .gitignore
exercise_1/src/: demo_f.py  demo_g.py  f_shading.py  hw1.npy  render_img.py  t_shading.py
exercise_1/tests/: test_f_shading.py  test_render_img.py  test_t_shading.py  test_vector_interp.py
exercise_2/src/: demo1.py  demo2.py  demo_utils.py  f_shading.py  lookat.py  perspective_project.py  rasterize.py  render_img.py  render_object.py  transforms.py  world2view.py
exercise_2/tests/: test_lookat.py  test_perspective_project.py  test_render_object.py  test_world2view.py
src/part1/: demo_f.py  demo_g.py  requirements.txt
src/part2/: demo1.py  demo2.py  demo_utils.py  hw2.npy  render_object.py  transforms.py
src/part3/: MatPhong.py  calc_normals.py  demo.py  hw3.npy  light.py  render_object.py  shade_gouraud.py  shade_phong.py  vector_interp.py  world2view.py
tests/part2/: test_rasterize.py  test_transforms.py
tests/part3/: test_MatPhong.py  test_calc_normals.py  test_light.py  test_render_object.py
