[project]
name = "computer-graphics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "opencv-python>=4.11.0.86",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "scikit-image>=0.26.0",
    "scipy>=1.16.3",
    "trimesh>=4.10.1",
]
